--- a/src/app/components/music-player/music-player.component.scss
+++ b/src/app/components/music-player/music-player.component.scss
@@ -26,9 +26,24 @@
     }
 }
 
-.music-player {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 5em;
+.music-player-wrapper {
+    max-width: 1024px;
+    margin: 0 auto;
+    display: flex;
+    &.is-mobile {
+        display: block;
+        .search-section {
+            box-shadow: 0px 2px 2px 0px #ccc;
+        }
+    }
+
+    .search-section {
+        flex: 1;
+        box-shadow: 2px 2px 2px 2px #ccc;
+    }
+
+    .detail-section {
+        padding-left: 1em;
+        flex: 3;
+    }
 }
