--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -10,3 +10,13 @@
     @include flex-center();
     flex-direction: column;
 }
+
+@mixin full-screen-drop {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #FFF;
+    opacity: 0.5;
+}
